--- a/packages/web/src/App.css
+++ b/packages/web/src/App.css
@@ -25,11 +25,12 @@ html {
   padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
-  font-family: -apple-system, "Segoe UI", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+  sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 body {
   display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   flex: auto;
   align-self: stretch;
