adding toggle css error class

--- a/packages/web/src/components/tag-picker/style.css
+++ b/packages/web/src/components/tag-picker/style.css
@@ -38,6 +38,24 @@
   cursor: text;
 }
 
+.react-tags-error {
+  position: relative;
+  padding: 3px 21px 3px 1rem;
+  border: 1px solid #d9d9d9;
+  border-radius: 4.71px;
+  max-width: 350px;
+  transition: all 0.2s ease-in;
+
+  /* shared font styles */
+  font-size: 1rem;
+  line-height: 1.2;
+
+  /* clicking anywhere will focus the input */
+  cursor: text;
+  box-shadow: 0px 0px 0px 2px inset #ff5630;
+  border-color: transparent;
+}
+
 .react-tags.is-focused {
   box-shadow: 0px 0px 0px 2px inset #2d2bc6;
   border-color: transparent;
