Update markdown css

--- a/packages/web/src/App.css
+++ b/packages/web/src/App.css
@@ -154,6 +154,7 @@ textarea {
   text-decoration: none;
   font-size: inherit;
   word-wrap: break-word;
+  word-break: break-all;
   line-height: inherit;
 }
 .markdown a:hover {
